<resources>
    <string name="app_name">Kalkulator</string>
    <string name="sub">Odejmowanie</string>
    <string name="add">Dodawanie</string>
    <string name="multi">Mnożenie</string>
    <string name="division">Dzielenie</string>
    <string name="simple_calc">Proste Obliczenia</string>
    <string name="stranger">Nieznajomy</string>
    <string name="asker">Co chciałbyś dzisiaj zrobić?</string>
    <string name="delta">Oblicz Delte</string>
    <string name="quadratic_equation">ax * x + b * x + c = 0</string>
    <string name="calculate">Oblicz</string>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


</resources>

